@@ -1,40 +1,62 @@
-jshm/Part*.class
-jshm/Instrument*.class
 jshm/Game*.class
 jshm/wt/WtSong*.class
+jshm/wt/WtGame*.class
 jshm/wt/WtGameTitle*.class
 jshm/wt/WtScore*.class
+jshm/scraper/Scraper*.class
+jshm/scraper/DataTable*.class
+jshm/scraper/format/TableRowFormat*.class
+jshm/scraper/format/TableColumnFormat*.class
+jshm/scraper/TieredTabularDataExtractor*.class
 jshm/JSHManager*.class
-jshm/rb/RbScore*.class
+jshm/rb/RbGameTitle*.class
 jshm/rb/RbSong*.class
+jshm/rb/RbGame*.class
 jshm/Platform*.class
-jshm/dataupdaters/RbScoreUpdater*.class
+jshm/Tiers*.class
+jshm/SongSource*.class
+jshm/exceptions/SongHiddenException*.class
+jshm/dataupdaters/RbSongUpdater*.class
 jshm/dataupdaters/WtSongUpdater*.class
-jshm/dataupdaters/GhSongUpdater*.class
-jshm/dataupdaters/WtScoreUpdater*.class
 jshm/gui/ScoreEditorPanel*.class
-jshm/gui/wizards/scoredownload/ScoreDownloadWizard*.class
-jshm/gui/wizards/scoredownload/WhatToDownloadPage*.class
+jshm/gui/wizards/scoredownload/MyListCellRenderer*.class
 jshm/gui/WikiSpPathPanel*.class
-jshm/gui/components/Hyperlink*.class
-jshm/gui/TreePopupMenu*.class
-jshm/gui/renderers/ScoresCellRenderer*.class
+jshm/gui/components/SpInfoViewer*.class
+jshm/gui/components/LabeledTextField*.class
+jshm/gui/components/EscapeableDialog*.class
+jshm/gui/notificationbars/NotificationBar*.class
+jshm/gui/notificationbars/NotificationBarPanel*.class
+jshm/gui/notificationbars/SelectSongBar*.class
 jshm/gui/WikiSpPathsFrame*.class
 jshm/gui/GuiUtil*.class
+jshm/gui/MyAction*.class
 jshm/gui/GUI*.class
-jshm/gui/LoginDialog*.class
-jshm/gui/datamodels/WtSongDataTreeTableModel*.class
+jshm/gui/datamodels/SongSortable*.class
+jshm/gui/datamodels/ModelTier*.class
 jshm/gui/datamodels/ScoresTreeTableModel*.class
-jshm/Song*.class
-jshm/Score*.class
-jshm/GameTitle*.class
-jshm/gh/GhSong*.class
-jshm/gh/GhGame*.class
-jshm/gh/GhGameTitle*.class
+jshm/properties/tiers.defaults.properties
 jshm/xml/GhSongInfoFetcher*.class
-jshm/resources/images/page.gif
+jshm/xml/RbSongDataFetcher*.class
+jshm/xml/RbSongInfoFetcher*.class
+jshm/xml/WtSongDataFetcher*.class
+jshm/resources/text/Sorting.properties
+jshm/resources/text/GameTitle.properties
+jshm/resources/images/toolbar/close24.png
+jshm/resources/images/toolbar/close_empty24.png
+jshm/resources/images/toolbar/close_empty_dark24.png
+jshm/resources/images/songsources/32/TBRB.png
+jshm/resources/images/songsources/64/TBRB.png
+jshm/resources/images/gametitles/TBRB_32.png
+jshm/resources/images/gametitles/GH5_32.png
+jshm/resources/images/stitch/psd/stitchasalienicon.ico
+jshm/sh/scraper/RbScoreScraper*.class
+jshm/sh/scraper/WtSongScraper*.class
 jshm/sh/scraper/wiki/SpPathScraper*.class
 jshm/sh/scraper/wiki/ActionsScraper*.class
-jshm/sh/scraper/wiki/SpChartScraper*.class
 jshm/sh/scraper/wiki/Action*.class
-jshm/util/IsoDateParser*.class
+jshm/sh/scraper/WtScoreScraper*.class
+jshm/sh/scraper/GhScoreScraper*.class
+jshm/sh/scraper/RbSongScraper*.class
+jshm/sh/scraper/WtDataTable*.class
+jshm/sh/RbPlatform*.class
+jshm/util/Properties*.class
