@@ -1,58 +1,129 @@
-A      /test/jshm/sh/scraper/wiki/ActionsScraperTest.java
-A      /test/jshm/sh/scraper/wiki
-M      /src/jshm/Part.java
-M      /src/jshm/Instrument.java
+M      /test/jshm/sh/scraper/wiki/ActionsScraperTest.java
+M      /test/jshm/util/TextTest.java
 M      /src/jshm/Game.java
 M      /src/jshm/wt/WtSong.java
+M      /src/jshm/wt/WtGame.java
 M      /src/jshm/wt/WtGameTitle.java
 M      /src/jshm/wt/WtScore.java
+M      /src/jshm/scraper/Scraper.java
+M      /src/jshm/scraper/DataTable.java
+M      /src/jshm/scraper/format/TableRowFormat.java
+M      /src/jshm/scraper/format/TableColumnFormat.java
+M      /src/jshm/scraper/TieredTabularDataExtractor.java
 M      /src/jshm/JSHManager.java
-M      /src/jshm/rb/RbScore.java
+M      /src/jshm/rb/RbGameTitle.java
 M      /src/jshm/rb/RbSong.java
+M      /src/jshm/rb/RbGame.java
 M      /src/jshm/Platform.java
-A      /src/jshm/concepts/WikiActionsScraperTest.java
-M      /src/jshm/concepts/WikiSpScraperTest.java
-M      /src/jshm/dataupdaters/RbScoreUpdater.java
+M      /src/jshm/Tiers.java
+M      /src/jshm/SongSource.java
+M      /src/jshm/concepts/WikiActionsScraperTest.java
+M      /src/jshm/concepts/TierGrabber.java
+M      /src/jshm/exceptions/SongHiddenException.java
+M      /src/jshm/dataupdaters/RbSongUpdater.java
 M      /src/jshm/dataupdaters/WtSongUpdater.java
-M      /src/jshm/dataupdaters/GhSongUpdater.java
-M      /src/jshm/dataupdaters/WtScoreUpdater.java
 M      /src/jshm/gui/ScoreEditorPanel.java
-M      /src/jshm/gui/wizards/scoredownload/ScoreDownloadWizard.java
-M      /src/jshm/gui/wizards/scoredownload/WhatToDownloadPage.java
-A      /src/jshm/gui/WikiSpPathsFrame.form
-A      /src/jshm/gui/WikiSpPathPanel.java
-M      /src/jshm/gui/components/Hyperlink.java
+M      /src/jshm/gui/wizards/scoredownload/MyListCellRenderer.java
+M      /src/jshm/gui/WikiSpPathPanel.java
+M      /src/jshm/gui/components/SpInfoViewer.java
+M      /src/jshm/gui/components/LabeledTextField.java
+M      /src/jshm/gui/components/EscapeableDialog.java
 M      /src/jshm/gui/GUI.form
-M      /src/jshm/gui/TreePopupMenu.java
-M      /src/jshm/gui/renderers/ScoresCellRenderer.java
-A      /src/jshm/gui/WikiSpPathsFrame.java
+A      /src/jshm/gui/notificationbars/NotificationBar.java
+A      /src/jshm/gui/notificationbars/NotificationBarPanel.java
+A      /src/jshm/gui/notificationbars/SelectSongBar.java
+A      /src/jshm/gui/notificationbars/NotificationBar.form
+A      /src/jshm/gui/notificationbars/SelectSongBar.form
+A      /src/jshm/gui/notificationbars
+M      /src/jshm/gui/WikiSpPathsFrame.java
 M      /src/jshm/gui/GuiUtil.java
+M      /src/jshm/gui/MyAction.java
 M      /src/jshm/gui/GUI.java
-A      /src/jshm/gui/WikiSpPathPanel.form
-M      /src/jshm/gui/LoginDialog.java
-M      /src/jshm/gui/datamodels/WtSongDataTreeTableModel.java
+M      /src/jshm/gui/datamodels/SongSortable.java
+M      /src/jshm/gui/datamodels/ModelTier.java
 M      /src/jshm/gui/datamodels/ScoresTreeTableModel.java
-M      /src/jshm/Song.java
-M      /src/jshm/Score.java
-M      /src/jshm/GameTitle.java
-M      /src/jshm/gh/GhSong.java
-M      /src/jshm/gh/GhGame.java
-M      /src/jshm/gh/GhGameTitle.java
-A      /src/jshm/xml/GhSongInfoFetcher.java
-A      /src/jshm/resources/images/page.gif
-D      /src/jshm/sh/scraper/WikiSpScraper.java
-A      /src/jshm/sh/scraper/wiki/SpPathScraper.java
-A      /src/jshm/sh/scraper/wiki/ActionsScraper.java
-A      /src/jshm/sh/scraper/wiki/SpChartScraper.java
-A      /src/jshm/sh/scraper/wiki/Action.java
-A      /src/jshm/sh/scraper/wiki
-M      /src/jshm/util/IsoDateParser.java
+A      /src/jshm/properties/tiers.defaults.properties
+M      /src/jshm/xml/GhSongInfoFetcher.java
+M      /src/jshm/xml/RbSongDataFetcher.java
+M      /src/jshm/xml/RbSongInfoFetcher.java
+M      /src/jshm/xml/WtSongDataFetcher.java
+M      /src/jshm/resources/text/Sorting.properties
+M      /src/jshm/resources/text/GameTitle.properties
+A      /src/jshm/resources/images/toolbar/close24.png
+A      /src/jshm/resources/images/toolbar/close_empty24.png
+A      /src/jshm/resources/images/toolbar/close_empty_dark24.png
+A      /src/jshm/resources/images/songsources/32/TBRB.png
+A      /src/jshm/resources/images/songsources/64/TBRB.png
+A      /src/jshm/resources/images/gametitles/GH5_64.png
+A      /src/jshm/resources/images/gametitles/TBRB_32.png
+A      /src/jshm/resources/images/gametitles/TBRB_64.png
+A      /src/jshm/resources/images/gametitles/GH5_32.png
+A      /src/jshm/resources/images/stitch/psd/stitchasalienicon.ico
+M      /src/jshm/sh/scraper/RbScoreScraper.java
+M      /src/jshm/sh/scraper/WtSongScraper.java
+M      /src/jshm/sh/scraper/wiki/SpPathScraper.java
+M      /src/jshm/sh/scraper/wiki/ActionsScraper.java
+M      /src/jshm/sh/scraper/wiki/Action.java
+M      /src/jshm/sh/scraper/WtScoreScraper.java
+M      /src/jshm/sh/scraper/GhScoreScraper.java
+M      /src/jshm/sh/scraper/RbSongScraper.java
+M      /src/jshm/sh/scraper/WtDataTable.java
+M      /src/jshm/sh/RbPlatform.java
+M      /src/jshm/util/Properties.java
+M      /build.xml
+A      /internal_lib/launch4j/.classpath
+A      /internal_lib/launch4j/LICENSE.txt
+A      /internal_lib/launch4j/head/LICENSE.txt
+A      /internal_lib/launch4j/head
+A      /internal_lib/launch4j/launch4j.jar
+A      /internal_lib/launch4j/.project
+A      /internal_lib/launch4j/w32api/libadvapi32.a
+A      /internal_lib/launch4j/w32api/MinGW.LICENSE.txt
+A      /internal_lib/launch4j/w32api/libgcc.a
+A      /internal_lib/launch4j/w32api/libshell32.a
+A      /internal_lib/launch4j/w32api/libmsvcrt.a
+A      /internal_lib/launch4j/w32api/libuser32.a
+A      /internal_lib/launch4j/w32api/libkernel32.a
+A      /internal_lib/launch4j/w32api/libmingw32.a
+A      /internal_lib/launch4j/w32api
+A      /internal_lib/launch4j/lib/foxtrot.jar
+A      /internal_lib/launch4j/lib/forms.jar
+A      /internal_lib/launch4j/lib/XStream.LICENSE.txt
+A      /internal_lib/launch4j/lib/looks.jar
+A      /internal_lib/launch4j/lib/foxtrot.LICENSE.txt
+A      /internal_lib/launch4j/lib/JGoodies.Forms.LICENSE.txt
+A      /internal_lib/launch4j/lib/formsrt.jar
+A      /internal_lib/launch4j/lib/JGoodies.Looks.LICENSE.txt
+A      /internal_lib/launch4j/lib/commons-beanutils.jar
+A      /internal_lib/launch4j/lib/commons-logging.jar
+A      /internal_lib/launch4j/lib/commons.LICENSE.txt
+A      /internal_lib/launch4j/lib/Nuvola.Icon.Theme.LICENSE.txt
+A      /internal_lib/launch4j/lib/xstream.jar
+A      /internal_lib/launch4j/lib
+A      /internal_lib/launch4j/manifest/xp-themes.exe.manifest
+A      /internal_lib/launch4j/manifest/uac.exe.manifest
+A      /internal_lib/launch4j/manifest
+A      /internal_lib/launch4j/bin/ld.exe
+A      /internal_lib/launch4j/bin/COPYING
+A      /internal_lib/launch4j/bin/windres.exe
+A      /internal_lib/launch4j/bin
+A      /internal_lib/launch4j/launch4j.exe
+A      /internal_lib/launch4j/launch4j.jfpr
+A      /internal_lib/launch4j/launch4jc.exe
+A      /internal_lib/launch4j/.settings/org.eclipse.jdt.core.prefs
+A      /internal_lib/launch4j/.settings
+A      /internal_lib/launch4j/build.xml
+A      /internal_lib/launch4j
 M      /ChangeLog.txt
+A      /internal_libsrc/launch4j/launch4j-src.zip
+A      /internal_libsrc/launch4j
+M      /Readme.txt
 M      /internal/jshm/internal/xml/WtSongDataGenerator.java
 M      /internal/jshm/internal/xml/RbSongDataGenerator.java
-A      /internal/jshm/internal/xml/GhSongMetaDataGenerator.java
-A      /internal/jshm/internal/ConsoleProgressHandle.java
+M      /internal/jshm/internal/xml/GhSongMetaDataGenerator.java
+M      /internal/jshm/internal/ConsoleProgressHandle.java
 M      /internal/jshm/internal/NewVersionPost.txt
 M      /internal/jshm/internal/JshmThreadManager.java
-A      /internal/jshm/internal/concepts/EnumVsTypeField.java
-A      /internal/jshm/internal/concepts
+M      /internal/jshm/internal/patcher/Patcher.java
+M      /internal/jshm/internal/concepts/EnumVsTypeField.java
+ M     
